--- a/tox.ini
+++ b/tox.ini
@@ -15,7 +15,7 @@ commands =
 deps =
     pytest
     pytest-xdist
-    pytest-cov==2.2.1
+    pytest-cov
     pytest-remove-stale-bytecode
     -rrequirements.txt
     --upgrade
