--- a/tox.ini
+++ b/tox.ini
@@ -13,6 +13,7 @@ commands =
     py.test tests
 
 deps =
+    coveralls
     pytest
     pytest-xdist
     pytest-cov
@@ -22,6 +23,9 @@ deps =
 
 passenv =
     TOX_*
+    TRAVIS
+    TRAVIS_JOB_ID
+    TRAVIS_BRANCH
 
 recreate = True
 
