--- a/.travis.yml
+++ b/.travis.yml
@@ -39,8 +39,11 @@ install:
   - eval "$(pyenv virtualenv-init -)"
   - curl -L https://raw.githubusercontent.com/yyuu/pyenv-installer/master/bin/pyenv-installer | bash
 
-  - pip install tox-travis
+  - pip install tox-travis coveralls
   - pip install -r requirements.txt
 
 script:
   - tox
+
+after_success:
+  coveralls
